La Taula del Form surt de la pantalla (overflow) https://github.com/GovernIB/genapp/issues/81

--- a/instanciagenerica-back/src/main/webapp/css/default.css
+++ b/instanciagenerica-back/src/main/webapp/css/default.css
@@ -1,5 +1,17 @@
 /* Default CSS Template */
 
+/*
+.col-md-9-optional {
+    
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 75%;
+    flex: 0 0 75%;
+    max-width: 75%;
+    
+}
+*/
+
+
 .tdformlabel tbody td:nth-child(1) {
 	text-align: right;
 	font-weight: bold;
